Added start and end symbols to `StencilLine`.