@@ -5,6 +5,7 @@ import javafx.geometry.Point2D;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 public class StencilLine
     extends StyleBase<StencilLine>
@@ -16,7 +17,9 @@ public class StencilLine
     // The points on the line
     private final List<Point2D> points = new ArrayList<>();
 
-    // The symbols and the start and end of the line.
+    // The symbols at the start and end of the line.
+    private Symbol startSymbol = Symbol.NONE;
+    private Symbol endSymbol = Symbol.NONE;
 
     //---------------------------------------------------------------------
     // Constructor
@@ -50,6 +53,16 @@ public class StencilLine
         return this;
     }
 
+    public StencilLine start(Symbol symbol) {
+        this.startSymbol = Objects.requireNonNull(symbol);
+        return this;
+    }
+
+    public StencilLine end(Symbol symbol) {
+        this.endSymbol = Objects.requireNonNull(symbol);
+        return this;
+    }
+
     public Bounds draw(Stencil stencil) {
         stencil.pen().save()
             .setStroke(getForeground())
@@ -57,12 +70,37 @@ public class StencilLine
             .strokePolyline(points)
             .restore();
 
+        if (points.size() > 1 && startSymbol != Symbol.NONE) {
+            drawSymbol(stencil, startSymbol, points.get(1), points.get(0));
+        }
+
+        if (points.size() > 1 && endSymbol != Symbol.NONE) {
+            var n = points.size() - 1;
+            drawSymbol(stencil, endSymbol, points.get(n-1), points.get(n));
+        }
+
         return Pen.boundsOf(points);
+    }
+
+    private void drawSymbol(
+        Stencil sten,
+        Symbol symbol,
+        Point2D from,
+        Point2D to
+    ) {
+        var angle = Pen.angleOf(to, from);
+        sten.savePen()
+            .translate(to.getX(), to.getY())
+            .rotate(angle)
+            .draw(Stencil.symbol()
+                .symbol(symbol)
+                .at(0, 0))
+            .restorePen();
     }
 
     private Point2D last() {
         return points.isEmpty()
             ? Point2D.ZERO
-            : points.get(points.size() - 1);
+            : points.getLast();
     }
 }
